Lab2 save ipynb

--- a/Lab_02/Lab_02.ipynb
+++ b/Lab_02/Lab_02.ipynb
@@ -4,6 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Importing all the packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import librosa\n",
+    "import matplotlib.pyplot as plt\n",
+    "import IPython.display as ipd\n",
+    "import numpy as np\n",
+    "import scipy.signal as signal\n",
+    "import scipy.io.wavfile as wavfile\n",
+    "import matplotlib.pyplot as plt\n",
+    "import IPython.display as ipd\n",
+    "import numpy as np\n",
+    "import librosa\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import librosa\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import librosa\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A1. Find the first derivative of your speech signal with finite difference method. Listen to the first derivative signal and the original speech signal."
    ]
   },
@@ -24,12 +57,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import scipy.signal as signal\n",
-    "import scipy.io.wavfile as wavfile\n",
-    "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd\n",
-    "\n",
     "# Load the original speech signal\n",
     "fs, speech = wavfile.read('Lab_01.wav')\n",
     "\n",
@@ -166,10 +193,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import librosa\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Load the first derivative signal\n",
     "file_path = 'first_derivative.wav'\n",
     "first_derivative, fs = librosa.load(file_path, sr=None)\n",
@@ -248,29 +271,25 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import librosa\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the first derivative signal\n",
+    "# Loading the first derivative signal\n",
     "file_path = 'first_derivative.wav'\n",
     "first_derivative, fs = librosa.load(file_path, sr=None)\n",
     "\n",
-    "# Find zero crossings\n",
+    "# Finding zero crossings\n",
     "zero_crossings = librosa.zero_crossings(first_derivative, pad=False)\n",
     "\n",
-    "# Compute lengths between consecutive zero crossings\n",
+    "# Computing lengths between consecutive zero crossings\n",
     "lengths = np.diff(np.where(zero_crossings)[0])\n",
     "\n",
-    "# Determine speech and silence regions based on a length threshold\n",
+    "# Determining speech and silence regions based on a length threshold\n",
     "threshold = 1  # Adjust this threshold as needed\n",
     "speech_indices = np.where(lengths > threshold)[0]\n",
     "silence_indices = np.where(lengths <= threshold)[0]\n",
     "\n",
-    "# Create figure and axes\n",
+    "# Creating figure and axes\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
     "\n",
-    "# Plot first derivative signal and speech/silence regions\n",
+    "# Ploting the first derivative signal and  the speech/silence regions\n",
     "for idx in speech_indices:\n",
     "    start_idx = np.where(zero_crossings)[0][idx]\n",
     "    end_idx = np.where(zero_crossings)[0][idx + 1]\n",
@@ -288,7 +307,7 @@
     "ax.set_ylabel('Amplitude')\n",
     "ax.grid(True)\n",
     "\n",
-    "# Zoom in on the region between 4000 and 6000\n",
+    "# Zooming in on the region between 4000 and 6000\n",
     "ax.set_xlim(4000, 6000)\n",
     "\n",
     "plt.show()\n"
@@ -437,10 +456,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import librosa\n",
-    "\n",
     "def plot_audio_signals(word_files, title):\n",
     "    plt.figure(figsize=(12, 6))\n",
     "    for idx, filename in enumerate(word_files):\n",
@@ -516,18 +531,13 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import librosa\n",
-    "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd\n",
-    "\n",
-    "# Load the statement audio file\n",
+    "# Loading the statement audio file\n",
     "statement_audio, sr_statement = librosa.load(\"You_Submitted_the_Report.wav\", sr=None)\n",
     "\n",
-    "# Load the question audio file\n",
+    "# Loading the question audio file\n",
     "question_audio, sr_question = librosa.load(\"You_Submitted_the_Report_QQ.wav\", sr=None)\n",
     "\n",
-    "# Display waveform and listen to the statement audio\n",
+    "# Displaying waveform and listen to the statement audio\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(np.linspace(0, len(statement_audio) / sr_statement, len(statement_audio)), statement_audio, color='b')\n",
     "plt.title('Statement Audio Waveform')\n",
@@ -539,7 +549,7 @@
     "print(\"Statement Audio:\")\n",
     "ipd.Audio(\"You_Submitted_the_Report.wav\")\n",
     "\n",
-    "# Display waveform and listen to the question audio\n",
+    "# Displaying waveform and listen to the question audio\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(np.linspace(0, len(question_audio) / sr_question, len(question_audio)), question_audio, color='r')\n",
     "plt.title('Question Audio Waveform')\n",
@@ -551,21 +561,21 @@
     "print(\"Question Audio:\")\n",
     "ipd.Audio(\"You_Submitted_the_Report_QQ.wav\")\n",
     "\n",
-    "# Compare duration of the two audio files\n",
+    "# Comparing duration of the two audio files\n",
     "duration_statement = librosa.get_duration(y=statement_audio, sr=sr_statement)\n",
     "duration_question = librosa.get_duration(y=question_audio, sr=sr_question)\n",
     "\n",
     "print(\"Duration of Statement Audio:\", duration_statement, \"seconds\")\n",
     "print(\"Duration of Question Audio:\", duration_question, \"seconds\")\n",
     "\n",
-    "# Compare mean amplitude of the two audio files\n",
+    "# Comparing mean amplitude of the two audio files\n",
     "mean_amplitude_statement = np.mean(np.abs(statement_audio))\n",
     "mean_amplitude_question = np.mean(np.abs(question_audio))\n",
     "\n",
     "print(\"Mean Amplitude of Statement Audio:\", mean_amplitude_statement)\n",
     "print(\"Mean Amplitude of Question Audio:\", mean_amplitude_question)\n",
     "\n",
-    "# Compare peak amplitude of the two audio files\n",
+    "# Comparing peak amplitude of the two audio files\n",
     "peak_amplitude_statement = np.max(np.abs(statement_audio))\n",
     "peak_amplitude_question = np.max(np.abs(question_audio))\n",
     "\n",
