--- a/Lab_04/Lab_04.ipynb
+++ b/Lab_04/Lab_04.ipynb
@@ -291,6 +291,7 @@
    "source": [
     "\n",
     "# Convert the speech signal to floating-point format\n",
+    "# librosa.stft() requires floating-point audio data.\n",
     "speech_signal_float = speech_signal.astype(float)\n",
     "\n",
     "# Define parameters\n",
